<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_add_title"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_title"
                android:layout_width="178dp"
                android:layout_height="81dp"
                android:hint="@string/app_add_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="177dp"
                android:layout_height="74dp"
                android:hint="@string/app_add_description"
                android:inputType="text" />

            <TextView
                android:id="@+id/text_view_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_view_category"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/category_array" />

            <TextView
                android:id="@+id/text_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_add_date"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_add_select_date"
                android:inputType="none"
                android:onClick="showDatePicker" />

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_view_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_add_time"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_add_select_time"
                android:inputType="none"
                android:onClick="showTimePicker" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_add_button" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
